<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 NetEase, Inc.  All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/one_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_030404">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_member_video"
        android:layout_width="@dimen/common_dp_120"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/common_dp_49"
        android:layout_marginEnd="@dimen/common_dp_46"
        android:layout_marginBottom="@dimen/common_dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.netease.yunxin.app.wisdom.edu.ui.clazz.widget.TitleView
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_dp_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.netease.yunxin.app.wisdom.edu.ui.clazz.widget.BottomView
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/layout_whiteboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/common_dp_8"
        app:layout_constraintBottom_toTopOf="@id/bottom_view"
        app:layout_constraintEnd_toStartOf="@id/rcv_member_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_goneMarginEnd="@dimen/common_dp_174" />

    <RelativeLayout
        android:id="@+id/layout_share_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/common_dp_8"
        android:background="@color/color_030404"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottom_view"
        app:layout_constraintEnd_toStartOf="@id/rcv_member_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_goneMarginEnd="@dimen/common_dp_174" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_share_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_dp_0"
        android:background="@color/color_030404"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/you_are_sharing_the_screen"
        android:textColor="@color/white"
        android:textSize="@dimen/common_dp_17"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottom_view"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintTop_toBottomOf="@id/title_layout" />

    <RelativeLayout
        android:id="@+id/rl_class_init"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/common_dp_8"
        android:background="@color/color_101418"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/class_init_tips"
        app:layout_constraintBottom_toTopOf="@id/bottom_view"
        app:layout_constraintEnd_toStartOf="@id/rcv_member_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_goneMarginEnd="@dimen/common_dp_174">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_class_init"
            android:layout_width="@dimen/common_dp_59"
            android:layout_height="@dimen/common_dp_141"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_room_init" />

        <TextView
            android:id="@+id/tv_class_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_class_init"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/common_dp_13"
            android:gravity="center"
            android:text="课程还未开始，请耐心等待哦"
            android:textColor="@color/color_8d94a0" />
    </RelativeLayout>

    <com.netease.yunxin.app.wisdom.edu.ui.clazz.widget.ClazzInfoView
        android:id="@+id/clazz_info_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/layout_members"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/layout_handsup_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_im"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_1a2028"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/iv_chat_hide"
            android:layout_width="@dimen/common_dp_31"
            android:layout_height="@dimen/common_dp_48"
            android:layout_marginStart="@dimen/common_dp_40"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_title_hide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_chat_room"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_dp_40"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/common_dp_2"
            android:gravity="center_vertical"
            android:text="@string/chat_room"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_18_dp" />

        <View
            android:id="@+id/line_horizontal_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_dp_1"
            android:layout_below="@id/iv_chat_hide"
            android:background="@color/color_60_54585C" />

        <FrameLayout
            android:id="@+id/layout_chat_room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/line_horizontal_top" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/layout_zoom_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_class_finish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/common_dp_40"
        android:background="@color/color_030404"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_class_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_dp_102"
            android:gravity="center"
            android:text="@string/course_over"
            android:textColor="@color/color_8d94a0"
            android:textSize="@dimen/ts_24_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_class_finish_replay"
            android:layout_width="@dimen/common_dp_116"
            android:layout_height="@dimen/common_dp_36"
            android:layout_marginEnd="@dimen/common_dp_16"
            android:background="@drawable/bg_bottom_btn"
            android:gravity="center"
            android:text="@string/view_course_playback"
            android:textColor="@drawable/selector_text_color_chat"
            android:textSize="@dimen/ts_14_dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_class_finish_back"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_class_finish_back"
            android:layout_width="@dimen/common_dp_116"
            android:layout_height="@dimen/common_dp_36"
            android:background="@drawable/bg_bottom_btn"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@drawable/selector_text_color_chat"
            android:textSize="@dimen/ts_14_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_class_finish_replay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginEnd="@dimen/common_dp_46" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>